# tm_loc_mt

./: .coverage  .gitignore  custom_prompt.txt  pyproject.toml  requirements.txt  settings.ini  translate_loc.py  translate_loc_refactored.py
.github/workflows/: ci.yml
docs/: QUICK_START.md  README.md
scripts/: run_translation.bat
src/: config.py  excel_service.py  html_report_service.py  localization_engine.py  models.py  settings_manager.py  translation_service.py  utils.py  validation_service.py
tests/: __init__.py  conftest.py  test_models.py  test_placeholder_manager.py  test_validation_service.py
